--- a/Assets/Battlehub/RTEditor/Battlehub.RTEditor.asmdef
+++ b/Assets/Battlehub/RTEditor/Battlehub.RTEditor.asmdef
@@ -5,7 +5,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:87494dd5f0eae244faefdc0364122ed5",
         "GUID:1826c0224c0d048b88112c79bbb0cd85",
-        "GUID:d8b63aba1907145bea998dd612889d6b"
+        "GUID:d8b63aba1907145bea998dd612889d6b",
+        "GUID:8c4dd21966739024fbd72155091d199e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
