--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.collab-proxy": "1.2.16",
+    "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.1",
     "com.unity.mathematics": "1.1.0",
     "com.unity.multiplayer-hlapi": "1.0.6",
@@ -10,7 +12,7 @@
     "com.unity.render-pipelines.universal": "7.4.1",
     "com.unity.test-framework": "1.1.14",
     "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.2.9",
+    "com.unity.timeline": "1.2.14",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.interaction.toolkit": "0.9.4-preview",
     "com.unity.xr.management": "3.2.13",
